# black-hat-rust

./: Cargo.toml
src/ch01/: sha1_cracker.rs
src/ch02/tricoder/: main.rs  ports.rs  subdomain.rs
src/ch02/tricoder/src/: main.rs  ports.rs  subdomains.rs
