[package]
name = "black_hat_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "sha1_cracker"
version = "0.1.0"
path = "src/ch01/sha1_cracker/main.rs"

[[bin]]
name = "tricoder"
path = "src/ch02/tricoder/main.rs"

[dependencies]
anyhow = "1.0.65"
hex = "0.4.3"
sha1 = "0.10.5"
thiserror = "1.0.37"
reqwest = { version = "0.11", features = ["json", "blocking", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
rayon = "1.5.3"
